--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         /* --- FOOTER --- */
         footer {
             height: 40px;
-            background-color: #e0e0e0;
+            background-color: #003366;
             display: flex;
             align-items: center;
             flex-shrink: 0;
