--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
             font-size: 0.85rem;
         }
         footer a {
-            color: var(--text-grey);
+            color: #FFFFFF;
             text-decoration: none;
             font-weight: 500;
         }
         footer a:hover {
-            color: var(--kbob-blue);
+            color: #FFFFFF;
             text-decoration: underline;
         }
 
