--- a/index.html
+++ b/index.html
@@ -110,9 +110,7 @@
         footer {
             background-color: #003366;
             flex-shrink: 0;
-            border-top: 1px solid #ccc;
-            font-size: 0.85rem;
-            padding: 12px 0;
+            height: 40px;
         }
         
         /* FIX 1: Footer Content strict left alignment */
