--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             padding: 12px 15px; border-bottom: 1px solid #eee; color: var(--text-dark); vertical-align: middle;
         }
         .data-table tr:last-child td { border-bottom: none; }
-        .data-table tr:hover td { background-color: #fcfcfc; }
+        .data-table tr:hover td { background-color: #e2e2e2; }
         
         /* --- COMPACT PHASE BADGES --- */
         .phase-compact-wrapper {
