--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                                             <th>Beschreibung</th>
                                             <th style="width: 90px;">Format</th>
                                             <th style="width: 60px; text-align:center;">Liste</th>
-                                            <th style="width: 25%;">IFC Mapping</th>
+                                            <th>IFC Mapping</th>
                                             <th style="width: 200px; text-align:center;">Phasen (2-6)</th>
                                         </tr>
                                     </thead>
