--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
 
         /* Catalog Toolbar & Filter */
         .catalog-toolbar { 
-            display: flex; justify-content: space-between; gap: 15px; align-items: center; 
+            display: flex; justify-content: center; gap: 20px; align-items: center; 
             margin-bottom: 30px; flex-wrap: wrap;
         }
-        .toolbar-right { display: flex; align-items: center; gap: 10px; }
+        .toolbar-right { display: flex; align-items: center; gap: 20px; }
         
         .az-filter-bar { 
             display: flex; flex-wrap: wrap; gap: 4px; align-items: center;
