--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KBOB BIM-Fachdatenkatalog - Mockup V2.7 (Table List View)</title>
+    <title>KBOB BIM-Fachdatenkatalog - Mockup V2.8 (Tweaked List View)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -263,7 +263,7 @@
         .card-tags { margin-top: auto; display: flex; gap: 8px; flex-wrap: wrap; }
 
 
-        /* --- LIST / TABLE VIEW (UPDATED V2.7) --- */
+        /* --- LIST / TABLE VIEW (UPDATED V2.8) --- */
         /* Wrapper becomes a table-like container */
         .element-list-container { 
             display: flex; 
@@ -282,7 +282,7 @@
             display: flex;
             align-items: center;
             background: var(--table-header-bg);
-            color: var(--table-header-text);
+            color: #ffffff; /* UPDATED: Explicit white text */
             padding: 12px 20px;
             font-weight: 600;
             font-size: 0.95rem;
@@ -317,15 +317,24 @@
         }
 
         /* Column Definition */
-        .list-col-name { width: 25%; font-weight: 700; color: var(--kbob-blue); font-size: 1.05rem; flex-shrink: 0; }
+        /* UPDATED: Name column is now standard weight and color */
+        .list-col-name { 
+            width: 25%; 
+            font-weight: 400; 
+            color: var(--text-dark); 
+            font-size: 0.95rem; 
+            flex-shrink: 0; 
+        }
+        
         .list-col-desc { flex: 1; color: var(--text-grey); font-size: 0.95rem; padding-right: 20px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
         
+        /* UPDATED: Tags aligned to start (Left) */
         .list-col-tags { 
             width: 280px; 
             display: flex; 
             flex-direction: row; 
             align-items: center;
-            justify-content: flex-end; 
+            justify-content: flex-start; /* Left aligned */
             gap: 8px;
             flex-wrap: wrap; 
             flex-shrink: 0;
@@ -335,13 +344,13 @@
         .tag-badge {
             display: inline-flex; 
             align-items: center;
-            background: #f0f2f5;       
+            background: #f0f2f5;        
             color: #111;              
             border: 1px solid #d0d7de; 
             font-size: 0.8rem; 
-            font-weight: 400;           
-            padding: 6px 12px;          
-            border-radius: 20px;        
+            font-weight: 400;            
+            padding: 6px 12px;           
+            border-radius: 20px;         
             font-family: inherit;
             /* New Interactive Styles */
             cursor: pointer;
