--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
             top: 12px;
             left: 12px;
             z-index: 10;
-            background-color: rgba(240, 242, 245, 0.95); /* Slight opacity match standard color */
+            /*background-color: rgba(240, 242, 245, 0.95); /* Slight opacity match standard color */
             box-shadow: 0 1px 3px rgba(0,0,0,0.1); /* Subtle shadow for visibility on image */
         }
         
