--- a/index.html
+++ b/index.html
@@ -1840,7 +1840,7 @@
                     <tr>
                         <td class="col-val"><span class="info-name-tooltip" title="${row.desc || ''}">${row.name}</span></td>
                         <td class="col-val"><span class="data-badge">${row.format || '-'}</span></td>
-                        <td class="col-center">${row.list ? '<span class="material-icons-outlined list-icon-active">check_circle</span>' : '-'}</td>
+                        <td class="col-center">${row.list ? '<span class="material-icons-outlined list-icon-active">menu</span>' : '-'}</td>
                         <td class="col-val"><span class="data-badge">${row.ifc || '-'}</span></td>
                         <td class="col-center">${renderPhaseBadges(row.phases)}</td>
                     </tr>`).join('') 
