--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KBOB BIM-Fachdatenkatalog - Mockup V3.2</title>
+    <title>KBOB Fachdatenkatalog - Mockup V3.2</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -1623,7 +1623,7 @@
             contentArea.innerHTML = `
                 <div class="container">
                     <div style="text-align: center; margin: 60px 0 80px 0;">
-                        <h1 style="font-size: 3.5rem; color: var(--kbob-blue); margin-bottom: 30px; letter-spacing: -1px;">BIM-Fachdatenkatalog</h1>
+                        <h1 style="font-size: 3.5rem; color: var(--kbob-blue); margin-bottom: 30px; letter-spacing: -1px;">Digitale Bauwerksdokumentation</h1>
                         <div class="central-search-container">
                             <div class="central-search-wrapper">
                                 <input type="text" id="globalSearchInput" class="central-search-input" placeholder="Suche nach Elementen oder Dokumenten..." autocomplete="off">
@@ -1633,7 +1633,7 @@
                         </div>
                     </div>
                     <div style="background: #fff; padding: 50px; border-radius: 4px; box-shadow: var(--shadow-sm); max-width: 900px; margin: 0 auto; border-top: 5px solid var(--kbob-blue);">
-                        <h2 style="color: var(--kbob-blue); margin-bottom: 20px;">Der zentrale BIM-Standard des Bundes</h2>
+                        <h2 style="color: var(--kbob-blue); margin-bottom: 20px;">Der zentrale Standard des Bundes</h2>
                         <p style="font-size: 1.1rem; color: var(--text-dark);">Die KBOB definiert die Informationsanforderungen für die Bestellung und Bewirtschaftung von Bauwerken. Dieser digitale Katalog dient als "Single Source of Truth" für alle Stakeholder.</p>
                     </div>
                 </div>`;
