--- a/index.html
+++ b/index.html
@@ -1633,8 +1633,10 @@
                         </div>
                     </div>
                     <div style="background: #fff; padding: 50px; border-radius: 4px; box-shadow: var(--shadow-sm); max-width: 900px; margin: 0 auto; border-top: 5px solid var(--kbob-blue);">
-                        <h2 style="color: var(--kbob-blue); margin-bottom: 20px;">Der zentrale Standard des Bundes</h2>
-                        <p style="font-size: 1.1rem; color: var(--text-dark);">Die KBOB definiert die Informationsanforderungen für die Bestellung und Bewirtschaftung von Bauwerksdokumentation. Dieser digitale Katalog dient als "Single Source of Truth" für alle Stakeholder.</p>
+                        <h2 style="color: var(--kbob-blue); margin-bottom: 20px;">Der Dokumentationsstandard für Öffentliche Bauherren</h2>
+                        <p style="font-size: 1.1rem; color: var(--text-dark);">Dieser Katalog definiert die verbindlichen Anforderungen an die Bauwerksdokumentation im Hochbau und dient als "Single Source of Truth" für Besteller, Planer, Ersteller und Betreiber.
+
+.</p>
                     </div>
                 </div>`;
             
