--- a/index.html
+++ b/index.html
@@ -581,21 +581,19 @@
 
         .toolbar-badge {
             position: absolute;
-            top: -8px;
-            right: -8px;
+            top: -10px;
+            right: -10px;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: var(--accent-red);
+            background: var(--kbob-blue);
             color: #fff;
-            font-size: 0.7rem;
+            font-size: 0.8rem;
             font-weight: 700;
-            min-width: 20px;
-            height: 20px;
-            padding: 0 5px;
-            border-radius: 10px;
-            border: 2px solid #fff;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+            min-width: 24px;
+            height: 24px;
+            padding: 0 6px;
+            border-radius: 12px;
             line-height: 1;
             box-sizing: border-box;
             z-index: 10;
