--- a/index.html
+++ b/index.html
@@ -1591,7 +1591,7 @@
          */
         function renderSidebarHeader(activeTags) {
             const resetBtn = activeTags.length > 0 
-                ? `<button class="sidebar-reset-btn" onclick="clearAllTagsFromURL()" title="Filter zurücksetzen"><span class="material-icons-outlined">restart_alt</span></button>`
+                ? `<button class="sidebar-reset-btn" onclick="clearAllTagsFromURL()" title="Filter zurücksetzen"><span class="material-icons-outlined">replay</span></button>`
                 : '';
             return `<div class="sidebar-header"><span>Filter</span>${resetBtn}</div>`;
         }
