--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
 
     <main id="content-area">
          <div class="container loading-state">
-            <span class="material-icons-outlined loading-spinner">refresh</span><br>
+            <span class="material-icons-outlined loading-spinner">replay</span><br>
             Anwendung wird initialisiert...
          </div>
     </main>
