--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
         .central-search-left {
             display: flex;
             align-items: center;
-            gap: var(--space-sm);
+            gap: var(--space-md);
         }
 
         .central-search-container .central-search-wrapper {
