--- a/index.html
+++ b/index.html
@@ -1620,7 +1620,7 @@
            DETAIL VIEW
            ============================================ */
         .detail-hero-wrapper {
-            background: var(--color-surface);
+            background: var(--color-bg-light);
             padding: var(--space-2xl) 0 var(--space-3xl) 0;
             margin-bottom: var(--space-2xl);
         }
