--- a/index.html
+++ b/index.html
@@ -1580,7 +1580,7 @@
 
         .gallery-filter-wrapper {
             display: flex;
-            height: var(--toolbar-height);
+            height: calc(var(--toolbar-height)*1.1);
             border-radius: var(--border-radius);
             overflow: hidden;
             border: 1px solid var(--color-border-input);
