--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: var(--color-border);
+            background-color: #DFE4E9;
             color: var(--color-text-primary);
             font-size: var(--text-h4);
             font-weight: var(--font-weight-semibold);
