--- a/index.html
+++ b/index.html
@@ -683,6 +683,7 @@
             height: 50px;
             gap: var(--space-lg);
             align-self: flex-end; /* Position toolbar to the right in vertical breadcrumb layout */
+            margin: var(--space-lg) 0;
         }
 
         .toolbar-btn {
