--- a/index.html
+++ b/index.html
@@ -727,6 +727,7 @@
             color: var(--color-white);
             padding: var(--space-2xl) var(--space-xl);
             flex-shrink: 0;
+            height: 360px;
         }
 
         .contact-section .container {
