--- a/index.html
+++ b/index.html
@@ -851,6 +851,7 @@
         /* Handbook Page - Accordion Style (Swiss Federal CD) */
         .handbook-accordion {
             margin-top: var(--space-xl);
+            margin-bottom: var(--space-3xl);
         }
 
         .accordion-item {
