--- a/index.html
+++ b/index.html
@@ -3091,9 +3091,9 @@
         .col-center { text-align: center; }
 
         .list-icon-active {
-            color: var(--color-success);
-            width: 20px;
-            height: 20px;
+            color: var(--color-surface-dark);
+            width: 22px;
+            height: 22px;
         }
 
         /* Phase Badges */
@@ -3104,8 +3104,8 @@
         }
 
         .phase-badge {
-            width: 26px;
-            height: 26px;
+            width: 22px;
+            height: 22px;
             border-radius: var(--border-radius-full);
             display: flex;
             align-items: center;
