--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
            ============================================ */
         .page-header {
             /* horizontal padding handled by parent .container */
-            padding-block: var(--space-2xl) var(--space-3xl);
+            padding-block: var(--space-xl) var(--space-3xl);
         }
 
         .page-title {
@@ -1137,7 +1137,7 @@
 
         /* Home Page Hero Section Wrapper */
         .home-hero-section {
-            padding-top: var(--space-2xl);
+            padding-top: var(--space-xl);
             padding-bottom: var(--space-3xl);
             padding-inline: var(--space-lg);
             display: flex;
